--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,31 +5,25 @@
 }
 
 :root {
-	/* --background: #ffffff; */
-	/* --foreground: #171717; */
-	@apply bg-gray-200 text-black;
-	--primary: #8727e7;
-	--secondary: #9900ff;
-	--accent: #ceb8ff;
-	--foreground: #042004;
-	--background: #f6fef6;
+	--primary: #6b46c1;
+	--secondary: #805ad5;
+	--accent: #d6bcfa;
+	--foreground: #1a202c;
+	--background: #f7fafc;
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		@apply bg-gray-900 text-gray-200;
-		--primary: #7818d8;
-		--secondary: #9900ff;
-		--accent: #170047;
-		--foreground: #dffbdf;
-		--background: #010901;
-		/* --background: #0a0a0a; */
-		/* --foreground: #ededed; */
+		--primary: #9f7aea;
+		--secondary: #805ad5;
+		--accent: #6b46c1;
+		--foreground: #edf2f7;
+		--background: #1a202c;
 	}
 }
 
 body {
-	background: var(--background);
+	background-color: var(--background);
 	color: var(--foreground);
 }
 
@@ -37,14 +31,12 @@ h1,
 h2,
 h3 {
 	@apply select-none;
-	/* -webkit-text-stroke: 1px var(--accent); */
 }
 
 h2 {
 	@apply text-4xl text-center;
 }
 
-/* Animated letters */
 .heading {
 	white-space: pre;
 	cursor: pointer;
@@ -53,11 +45,10 @@ h2 {
 }
 
 .heading:hover {
-	color: blueviolet;
+	color: var(--primary);
 	transform: translateY(-8px) rotate(5deg) scale(1.2);
 }
 
-/* Form elements */
 input,
 textarea {
 	border-radius: 10px;
